# fast-folder

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
examples/templates/: finance-monthly.yaml  python-project.yaml  research-note.yaml  rust-project.yaml  web-project.yaml
fastf/: CLAUDE.md  README.md
fastf/src/: main.rs
fastf/src/cli/: id.rs  new.rs  template.rs
fastf/src/core/: config.rs  counter.rs  naming.rs  template.rs
fastf/src/tui/: menu.rs  mod.rs  template_builder.rs
fastf/src/util/: paths.rs
src/: bootstrap.rs  lib.rs  main.rs
src/cli/: apply.rs  config.rs  mod.rs  new.rs  recent.rs  template.rs
src/core/: config.rs  counter.rs  index.rs  mod.rs  naming.rs  post_create.rs  project.rs  project_info.rs  template.rs  vars.rs
src/tui/: menu.rs  template_builder.rs
src/util/: paths.rs
tests/: integration.rs
