[package]
name = "fastf"
version = "0.1.0"
edition = "2024"
description = "Fast Folder Creator — template-driven project folder generator"

[[bin]]
name = "fastf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = "0.4"
anyhow = "1"
colored = "2"
console = "0.15"

[profile.release]
opt-level = 3
lto = true
strip = true
